Bug 833720 - shutdown thread after parsing ics calendars to avoid leaking process thread objects. r=philipp,standard8